--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="title" content="Meta Tags — Preview, Edit and Generate">
+    <meta name="title" content="">
+    
     <meta name="description" content="Feito por alunos, para alunos!!">
+    <meta name="keywords" content="codecampus, code, campus, codecampus.com.br, codecampus.com">
+
+    <meta property="twitter:image" content="https://cdn.discordapp.com/attachments/1048010244795678771/1075931281772257452/Logo_Escrita_Dark.png">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
