--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,35 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="title" content="">
+    <meta name="title" content=" CodeCampus - Hub de Aprendizado e Criação de Projetos de Engenharia de Software">
     
-    <meta name="description" content="Feito por alunos, para alunos!!">
-    <meta name="keywords" content="codecampus, code, campus, codecampus.com.br, codecampus.com">
+    <meta name="description" content="CodeCampus é o hub de aprendizado e criação de projetos da atlética de Engenharia de Software. Aqui você encontra conteúdo educacional de qualidade, projetos desafiadores e uma comunidade de aprendizes apaixonados por tecnologia.">
+
+    <meta name="keywords" content="engenharia de software, aprendizado, projetos, tecnologia, atlética, codeCampus, desprogramados">
+
+    <meta name="author" content="Renan Nardi">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="robots" content="index, follow">
 
     <meta property="twitter:image" content="https://cdn.discordapp.com/attachments/1048010244795678771/1075931281772257452/Logo_Escrita_Dark.png">
+
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1048010244795678771/1075931281772257452/Logo_Escrita_Dark.png">
+
+    <meta property="og:type" content="website">
+
+    <meta property="og:site_name" content="CodeCampus - Hub de Aprendizado e Criação de Projetos de Engenharia de Software">
+
+    <meta property="og:description" content="CodeCampus é o hub de aprendizado e criação de projetos da atlética de Engenharia de Software. Aqui você encontra conteúdo educacional de qualidade, projetos desafiadores e uma comunidade de aprendizes apaixonados por tecnologia.">
+
+    <meta property="og:title" content="CodeCampus - Hub de Aprendizado e Criação de Projetos de Engenharia de Software">
+
+    <meta property="twitter:card" content="summary_large_image">
+
+    <meta property="og:title" content="CodeCampus - Hub de Aprendizado e Criação de Projetos de Engenharia de Software">
+
+
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
