--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     
     <meta name="description" content="CodeCampus é o hub de aprendizado e criação de projetos da atlética de Engenharia de Software. Aqui você encontra conteúdo educacional de qualidade, projetos desafiadores e uma comunidade de aprendizes apaixonados por tecnologia.">
 
-    <meta name="keywords" content="engenharia de software, aprendizado, projetos, tecnologia, atlética, codeCampus, desprogramados">
+    <meta name="keywords" content="engenharia de software, aprendizado, projetos, tecnologia, atlética, codeCampus, desprogramados, code campus, alunos, unifatecie, fatecie, faculdade, site faculdade, site alunos">
 
     <meta name="author" content="Renan Nardi">
 
